--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,6 @@
 runtime: custom
 env: flex
 
-# Metabase does not support horizontal scaling
-#   https://github.com/metabase/metabase/issues/2754
-#   https://cloud.google.com/appengine/docs/flexible/java/configuring-your-app-with-app-yaml
 manual_scaling:
   instances: 1
 
@@ -13,7 +10,7 @@ env_variables:
   MB_DB_DBNAME: metabase
   MB_DB_PORT: 5432
   MB_DB_USER: metabase
-  MB_DB_PASS: changeme123
+  MB_DB_PASS: password12345
   MB_DB_HOST: 127.0.0.1
-  CLOUD_SQL_INSTANCE: project_id:region:database-name
+  CLOUD_SQL_INSTANCE: elated-unity-415016:us-central1:metabase
 
